[gd_scene load_steps=2 format=3 uid="uid://5fv1nmhgpd0x"]

[ext_resource type="Script" uid="uid://cr8aouxhtevvk" path="res://Scripts/On Screen Elements/race_finish_screen.gd" id="1_eve5d"]

[node name="RaceFinishScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eve5d")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.635294)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -321.0
offset_top = -180.0
offset_right = 79.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ResultLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Race Finished !!!"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="RematchButton" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Rematch"

[node name="MenuButton" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Back to Menu"
